--- a/pom.xml
+++ b/pom.xml
@@ -19,33 +19,8 @@
 	<modules>
 		<module>springcloud-alibaba-dependencies</module>
 		<module>springcloud-alibaba-gateway</module>
+		<module>springcloud-alibaba-oss</module>
+		<module>springcloud-alibaba-sms</module>
 	</modules>
-	<!--项目构建-->
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>com.spotify</groupId>
-				<artifactId>docker-maven-plugin</artifactId>
-				<version>0.4.13</version>
-				<configuration>
-					<imageName>${docker.image.prefix}/${project.artifactId}</imageName>
-					<dockerDirectory>src/main/docker</dockerDirectory>
-					<dockerHost>${docker.host}</dockerHost>
-					<resources>
-						<resource>
-							<targetPath>/</targetPath>
-							<directory>${project.build.directory}</directory>
-							<include>${project.build.finalName}.jar</include>
-						</resource>
-					</resources>
-				</configuration>
-			</plugin>
-		</plugins>
-		<finalName>${project.artifactId}</finalName>
-	</build>
 
 </project>
